[package]
name = "axum-cloud-run-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6" }
tokio = { version = "1.26", features = ["full"] }
tracing = { version = "0.1" }
tracing-logfmt = { version = "0.3" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
